Serviços de Teste
Serviços de Teste

--- a/SalappWs/Web.config
+++ b/SalappWs/Web.config
@@ -19,10 +19,15 @@
     </httpModules>
   </system.web>
   <system.serviceModel>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
     <services>
       <service behaviorConfiguration="Default" name="SalappWs.SalappWs">
         <endpoint address="" behaviorConfiguration="webBehavior" binding="webHttpBinding" contract="SalappWs.ISalappWs"/>
+        <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex"/>
+      </service>
+      <service behaviorConfiguration="Default" name="SalappWs.UsuarioWs">
+        <endpoint address="" behaviorConfiguration="webBehavior" binding="webHttpBinding" contract="SalappWs.IUsuarioWs"/>
         <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex"/>
       </service>
     </services>
