--- a/SalappWs/SalappWs.csproj
+++ b/SalappWs/SalappWs.csproj
@@ -95,18 +95,34 @@
     <Content Include="SalappWs.svc" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="UsuarioWs.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidade\Dados.cs" />
     <Compile Include="Entidade\Produto.cs" />
+    <Compile Include="Entidade\Usuario.cs" />
+    <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Exception\SalappException.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="ISalappWs.cs" />
+    <Compile Include="IUsuarioWs.cs" />
+    <Compile Include="Resources\MensagensErro.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MensagensErro.resx</DependentUpon>
+    </Compile>
     <Compile Include="SalappWs.svc.cs">
       <DependentUpon>SalappWs.svc</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioWs.svc.cs">
+      <DependentUpon>UsuarioWs.svc</DependentUpon>
+    </Compile>
+    <Compile Include="Util\UtilComum.cs" />
+    <Compile Include="Util\UtilDados.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -123,6 +139,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\MensagensErro.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MensagensErro.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
