--- a/SalappWs/SalappWs.csproj
+++ b/SalappWs/SalappWs.csproj
@@ -109,6 +109,7 @@
     </Compile>
     <Compile Include="ISalappWs.cs" />
     <Compile Include="IUsuarioWs.cs" />
+    <Compile Include="Negocio\UsuarioBll.cs" />
     <Compile Include="Resources\MensagensErro.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
